--- a/image_seg_multiclass.ipynb
+++ b/image_seg_multiclass.ipynb
@@ -3751,7 +3751,7 @@
         "    x = Conv2D(filters = n_filters, kernel_size = (kernel_size, kernel_size),\n",
         "                 padding = 'same',activation = 'relu')(x)\n",
         "\n",
-        "    x = x = BatchNormalization()(x) \n",
+        "    x = BatchNormalization()(x) \n",
         "    \n",
         "    return x\n",
         "\n",
